; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/msppp/extr_base.c_nvkm_msppp_new_.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/msppp/extr_base.c_nvkm_msppp_new_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_falcon_func = type { i32 }
%struct.nvkm_device = type { i32 }
%struct.nvkm_engine = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nvkm_msppp_new_(%struct.nvkm_falcon_func* %0, %struct.nvkm_device* %1, i32 %2, %struct.nvkm_engine** %3) #0 {
  %5 = alloca %struct.nvkm_falcon_func*, align 8
  %6 = alloca %struct.nvkm_device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.nvkm_engine**, align 8
  store %struct.nvkm_falcon_func* %0, %struct.nvkm_falcon_func** %5, align 8
  store %struct.nvkm_device* %1, %struct.nvkm_device** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.nvkm_engine** %3, %struct.nvkm_engine*** %8, align 8
  %9 = load %struct.nvkm_falcon_func*, %struct.nvkm_falcon_func** %5, align 8
  %10 = load %struct.nvkm_device*, %struct.nvkm_device** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.nvkm_engine**, %struct.nvkm_engine*** %8, align 8
  %13 = call i32 @nvkm_falcon_new_(%struct.nvkm_falcon_func* %9, %struct.nvkm_device* %10, i32 %11, i32 1, i32 548864, %struct.nvkm_engine** %12)
  ret i32 %13
}

declare dso_local i32 @nvkm_falcon_new_(%struct.nvkm_falcon_func*, %struct.nvkm_device*, i32, i32, i32, %struct.nvkm_engine**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
